--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,11 @@
     -->
     <title>React App</title>
     <style>
-      body {
+      html, body {
+        padding: 0;
         margin: 0;
+        height: 100%;
+        background-image: linear-gradient(175deg, #2b3658 0%, #523e5b 100%);
       }
     </style>
   </head>
